external/lmgc90_dev-fortran_lib/src/ChiPy/kernel/wrap_nlgs_3D.h

 /**
  * @fn void nlgs_3D_UseJacobiSolver(bool jacobi)
  * @brief Use a Jacobi solver instead of Gauss Seidel solver
  *
  * @cond PYDOC
  * usage : nlgs_3D_UseJacobiSolver(True) or nlgs_UseJacobiSolver(False)
  * @endcond
  *
  * @cond CDOC
  * @param[in] jacobi (boolean) : set to True to use a Jacobi solver
  * @endcond
  */
  extern "C" void nlgs_3D_UseJacobiSolver(bool jacobi);
/**
 * @fn void nlgs_3D_IsInitialized(int is_init = 1)
 * @brief In case of restart say that nlgs is initialized
 *
 * @cond PYDOC
 * python usage : nlgs_3D_IsInitialized(is_init=1)
 * @endcond
 */
 extern "C" void nlgs_3D_IsInitialized(int is_init=1);
/**
 * @fn void nlgs_3D_DisplayTacInfo(int itac)
 * @brief Display information concerning one contact
 *
 * @cond PYDOC
 * python usage : nlgs_3D_DsplayTacInfo(itac)
 * param[in] itac (integer) : contact rank
 * @endcond
 *
 * @cond CDOC
 * param[in] itac (int) : contact rank
 * @endcond
 */
 extern "C" void nlgs_3D_DisplayTacInfo(int itac);
 
//
///**
// * @fn void nlgs_3D_InitCohesiveBehav(void)
// * @brief update internal parameters of contact laws for each contact
// *
// * @cond PYDOC
// * python usage : nlgs_3D_InitCohesiveBehav(void)
// * @endcond
// */
// extern "C" void nlgs_3D_InitCohesiveBehav(void);

/**
 * @fn void nlgs_3D_UseRegularization(double rvalue1, double rvalue2)
 * @brief use some regularization heuristics on interaction laws
 *
 * @cond PYDOC
 * python usage : nlgs_3D_UseRegularization(krn, krt)
 * @param[in] krn (double)  : normal penality (default 1e14)
 * @param[in] krt (double)  : tangential penality (default 1e14)
 *
 * @endcond
 */
 extern "C" void nlgs_3D_UseRegularization(double rvalue1=1e14, double rvalue2=1e14);
/**
 * @fn void nlgs_3D_CutOpenCZM(double rvalue1)
 * @brief If some czm contact have a gap greater than the given they are considered as broken ; works only with EXPO_CZM or IQS_EXPO_CZM
 *
 * @cond PYDOC
 * python usage : nlgs_3D_CutOpenCZM(tol)
 * @param[in] tol (double)  : threshold on positive distance (default 1e-6)
 *
 * @endcond
 */
 extern "C" void nlgs_3D_CutOpenCZM(double rvalue1=1e-06);
/**
 * @fn void nlgs_3D_ManageInterpenetratedCZM(void)
 * @brief Apply a g0 strategy if gap is negative and if gap is positive (without using nlgs_3D_CutOpenCZM) ; works only with EXPO_CZM or IQS_EXPO_CZM
 *
 * @cond PYDOC
 * python usage : nlgs_3D_ManageInterpenetratedCZM()
 *
 * @endcond
 */
 extern "C" void nlgs_3D_ManageInterpenetratedCZM(void);