src/lmgc90_dev/src/ChiPy/kernel/wrap_nlgs_3D.f90

 
       character(c_char), dimension(30), intent(in) :: Wstorage_c
       character(c_char), dimension(5),  intent(in) :: checktype_c
       real(c_double), intent(in), value :: tol, RELAX
       integer(c_int), intent(in), value :: nb_iter_check, nb_block_iter
       !
       logical :: SDLactif
       character(len=30) :: Wstorage
       character(len=5)  :: checktype
       character(len=80) :: cout
       integer :: i_iter = 1, i_check = 2, i_post = 3
       integer :: iconv, iter, ib, ik

       integer(kind=4) :: timer_id_prep = 0
       integer(kind=4) :: timer_id_iter = 0
       integer(kind=4) :: timer_id_check = 0
       integer(kind=4) :: timer_id_post = 0

                                                                    !12345678901234567890
       if( timer_id_prep  == 0 ) timer_id_prep  = get_new_itimer_ID('[NLGS3] prep        ')
       if( timer_id_iter  == 0 ) timer_id_iter  = get_new_itimer_ID('[NLGS3] iter        ')
       if( timer_id_check == 0 ) timer_id_check = get_new_itimer_ID('[NLGS3] check       ')
       if( timer_id_post  == 0 ) timer_id_post  = get_new_itimer_ID('[NLGS3] post        ')

       Wstorage = ''
       do iter = 1, 30
         if( Wstorage_c(iter) == c_null_char ) exit
         Wstorage = Wstorage(1:iter-1) // Wstorage_c(iter)
       end do

       checktype = ''
       do iter = 1, 5
         checktype = checktype(1:iter-1) // checktype_c(iter)
       end do

       call start_itimer(timer_id_prep)

       CALL set_nlgs_parameter(checktype,tol,RELAX)

       if( trim(Wstorage) == 'Stored_Delassus_Loops' ) then
         SDLactif = .true.
       else if( trim(Wstorage) == 'Exchange_Local_Global' ) then
         SDLactif = .false.
       else
         call faterr( 'wrap_nlgs_3D::ExSolver', &
                      'Unknown solver type, choose among "Stored_Delassus_Loops" &
                      &and "Exchange_Local_Global"' )
       end if

       call prep_nlgs(SDLactif)

       call stop_itimer(timer_id_prep)

       iter = 0
       DO ib=1,nb_block_iter

          call start_itimer(timer_id_iter)
 
          IF( with_quick_scramble ) THEN
             CALL quick_scramble_nlgs       
          END IF
          IF( with_reverse_order  ) THEN
             CALL reverse_nlgs
          END IF
 
          DO ik=1,nb_iter_check
             iter = iter + 1
             CALL solve_nlgs(i_iter)
          END DO

          call stop_itimer(timer_id_iter)

          call start_itimer(timer_id_check)

          iconv=0
          CALL prep_check_nlgs(iconv)
          IF (iconv == 0 ) RETURN
          CALL solve_nlgs(i_check)
          CALL comp_check_nlgs(iconv)

          call stop_itimer(timer_id_check)
  
          call display_check_nlgs

          IF (iconv == 0 .or. iconv == -1) EXIT
       END DO

       call start_itimer(timer_id_post)

       CALL RnodHRloc_nlgs
       CALL solve_nlgs(i_post)
       CALL Nullify_EntityList_nlgs
 
       call stop_itimer(timer_id_post)

       if (iconv == -1 ) then
          write(cout,'(A32,I8)') '  @ NLGS diverged at ITERATION: ',iter
          call logmes(cout, .TRUE.)
          call faterr( 'wrap_nlgs_3D::ExSolver', cout)
       end if
      write(cout,'(A20,I8)') '  @ NLGS ITERATION: ',iter
      call logmes(cout)!, .true.)
      ! if( iter == nb_iter_check*nb_block_iter ) call logmes('  @ WARNING : NLGS not converged',.true.)
      if( iter == nb_iter_check*nb_block_iter ) call logmes('  @ WARNING : NLGS not converged')      
      
  END SUBROUTINE ExSolver

  subroutine IsInitialized(is_init) bind(C, name = 'nlgs_3D_IsInitialized')
    implicit none
    integer(kind=c_int), intent(in), value :: is_init
     
    call assume_is_initialized(is_init)

  end subroutine

  SUBROUTINE DisplayTacInfo(ik) bind(C, name = 'nlgs_3D_DisplayTacInfo')
    implicit none
    integer(c_int), intent(in), value :: ik

    call display_tacinfo(ik)

  END SUBROUTINE
  
  SUBROUTINE UseJacobiSolver(jacobi) bind(C, name = 'nlgs_3D_UseJacobiSolver')
    IMPLICIT NONE
    LOGICAL(C_BOOL) ,INTENT(IN), VALUE :: jacobi
    LOGICAL(KIND=4)                    :: jacobi_
    
    jacobi_ = jacobi
    call use_jacobi_solver( jacobi_ )

  END SUBROUTINE

  SUBROUTINE UseRegul(rvalue1,rvalue2) bind(C, name = 'nlgs_3D_UseRegularization')
    IMPLICIT NONE
    REAL(C_DOUBLE), INTENT(IN), VALUE :: rvalue1,rvalue2

    call use_regul(rvalue1,rvalue2)

  END SUBROUTINE UseRegul
  
  SUBROUTINE CutOpenCZM(rvalue1) bind(C, name = 'nlgs_3D_CutOpenCZM')
    IMPLICIT NONE
    REAL(C_DOUBLE), INTENT(IN), VALUE :: rvalue1

    call use_cut_open_czm(rvalue1)

  END SUBROUTINE CutOpenCZM
  
  SUBROUTINE ManageInterpenetratedCZM() bind(C, name = 'nlgs_3D_ManageInterpenetratedCZM')
    IMPLICIT NONE

    call use_manage_interpenetrated_czm()

  END SUBROUTINE

END MODULE wrap_NLGS_3D
